*Empty MediaWiki Message*

--- a/Jennie.mw
+++ b/Jennie.mw
@@ -1,4 +1,4 @@
-{{short description|Koonfur Kuuriya fanaand}}
+{{short description|Koonfur Kuuriya fanaand|pagetype=Koonfur Kuuriya Fanaand}}
 Jennie Kim (Kuuriyaan: 김제 니; (oo dhalatay Janaayo 16, 1996), oo si fiican loogu yaqaanay magaca '''Jennie''', waa Koonfur Kuuriya fanaan, Waxay ka doodday inay xubin ka tahay kooxda gabdhaha YG Entertainment ee [[Blackpink]] bishii Agoosto 2016.
 {| class="infobox biography vcard" style="width:22em"
 ! colspan="2" style="text-align:center;font-size:125%;font-weight:bold" |<span class="fn">Kim Jennie</span>
@@ -45,6 +45,6 @@ Jennie Kim (Kuuriyaan: 김제 니; (oo dhalatay Janaayo 16, 1996), oo si fiican 
 * [[Blackpink]]
 </div></div>
 |}
-<br />
+Waxay ku dhashay kuna kortay [[Koonfur Kuuriya]], Jennie waxay wax ku baratay [[New Zealand]] markii ay siddeed jirsatay shan sano, ka hor inta aysan ku soo noqon Koonfur Kuuriya sanadkii 2010. Waxay ku doodday inay xubin ka tahay kooxda gabdhaha ee [[Blackpink]] bishii Agoosto 2016 waxayna sameysay kulankeedii ugu horreeyay oo keliya ''[[Solo]]'' ah Noofambar 12, 2018.
 
 [[Category:Fan iyo Suugaan]]
