*Empty MediaWiki Message*

--- a/Jennie.mw
+++ b/Jennie.mw
@@ -1,50 +1,18 @@
 {{short description|Koonfur Kuuriya fanaand|pagetype=Koonfur Kuuriya Fanaand}}
-Jennie Kim (Kuuriyaan: 김제 니; (oo dhalatay Janaayo 16, 1996), oo si fiican loogu yaqaanay magaca '''Jennie''', waa Koonfur Kuuriya fanaan, Waxay ka doodday inay xubin ka tahay kooxda gabdhaha YG Entertainment ee [[Blackpink]] bishii Agoosto 2016.
-{| class="infobox biography vcard" style="width:22em"
-! colspan="2" style="text-align:center;font-size:125%;font-weight:bold" |<span class="fn">Kim Jennie</span>
-|-
-| colspan="2" style="text-align:center" |[[File:Jennie at a fansigning event on June 24, 2018.jpg|alt=|frameless]]
-|-
-! scope="row" |Magaca Saxda
-|<span lang="ko" class="nickname">김제니</span>
-|-
-! scope="row" |Dhalasho
-|<span class="nickname">Kim Jennie</span><span style="display:none"> (<span class="bday">1996-01-16</span>) </span>Janaayo 16, 1996<span class="noprint ForceAgeToShow"> (Wuxuu jiraa&nbsp;24)</span>
-<span class="birthplace">[[Korea Selatan|South korea]]</span>
-|-
-! scope="row" |Hada Ku Nool
-| class="label" |[[Seoul]]
-|-
-! scope="row" |Magacyo kale
-| class="nickname" |Jennie (제니)
-|-
-! scope="row" |Wadanka
-| class="category" |[[File:Flag_of_South_Korea.svg|23x23px]] [[Koonfur Kuuriya]]<br />
-|-
-! scope="row" |Shaqada
-| class="role" |<div class="hlist " style="margin-left:0em;"><div class="plainlist">
-* fanaan
-</div></div>
-|-
-| colspan="2" style="text-align:center" |'''Musical career'''
-|-
-! scope="row" |Nooca Fanka
-|[[K-pop]]
-|-
-! scope="row" |Qalabka
-| class="note" |Cod
-|-
-! scope="row" |Sanadaha Shaqada
-|2016–xaadir
-|-
-! scope="row" |[[Record label|Labels]]
-|[[YG Entertainment]]
-|-
-! scope="row" |La Xidhiidha
-|<div class="hlist " style="margin-left:0em;"><div class="plainlist">
-* [[Blackpink]]
-</div></div>
-|}
-Waxay ku dhashay kuna kortay [[Koonfur Kuuriya]], Jennie waxay wax ku baratay [[New Zealand]] markii ay siddeed jirsatay shan sano, ka hor inta aysan ku soo noqon Koonfur Kuuriya sanadkii 2010. Waxay ku doodday inay xubin ka tahay kooxda gabdhaha ee [[Blackpink]] bishii Agoosto 2016 waxayna sameysay kulankeedii ugu horreeyay oo keliya ''[[Solo]]'' ah Noofambar 12, 2018.
+Jennie Kim (Kuuriyaan: 김제 니; (oo dhalatay Janaayo 16, 1996), oo si fiican loogu yaqaanay magaca '''Jennie''', waa Koonfur Kuuriya fanaan, Waxay ka doodday inay xubin ka tahay kooxda gabdhaha YG Entertainment ee [[Blackpink]] bishii Agoosto 2016.{{Infobox musical artist|name=Jennie|years_active=2012–2013, 2016–xaadir|associated_acts=*[[Blackpink]]
+*[[YG Family]]|label=*YG Entertainment
+*Interscope Records|instrument=Cod|genre=*K-pop
+*dance-pop
+*hip hop music|origin=[[Seoul]], Koonfur Kuuriya|background=solo_singer<!--mandatory field must be formatted this way-->|website=<!-- {{URL|example.com}} -->|occupation=fanaand|image=Jennie Kim for Marie Claire Korea Magazine on October 9, 2018 (5).png<!--Please do not change without good reason. ALWAYS update the alt text. -->|birth_place=[[Seoul]], Koonfur Kuuriya <!-- Exact location disputed, see discussion on talkpage before changing.-->|birth_date={{birth date and age|1996|1|16}}|birth_name=Kim Jennie|native_name_lang=ko|native_name=제니|alt=Jennie faces forward in a white blouse against a red backdrop|caption=|module=}}
 
+== shaqo ==
+Jennie waxay ku dhalatay kuna kortay [[Koonfur Kuuriya]], laakiin waxay markii dambe u dhaqaaqday inay wax ku barato [[New Zealand]] markay tahay sideed jir shan sano, Waxay oo soo noqotay Koonfur Kuuriya sanadka 2010 si ay u noqoto fanaand.
+
+=== Blackpink ===
+{{Main|Blackpink}}
+[[File:171001_코리아_뮤직_페스티벌_블랙핑크_(8).jpg|left|thumb|Jennie bishii Oktoobar 1, 2017.]]
+Waxay ku doodday inay xubin ka tahay kooxda gabdhaha ee [[Blackpink]] bishii Agoosto 2016 waxayna sameysay kulankeedii ugu horreeyay oo keliya ''[[Solo]]'' ah Noofambar 12, 2018.
+
+== Nolosha hore ==
+Kim Jennie wuxuu ku dhashay Magaalada Seoul, Koonfur Kuuriya bishii Janaayo 16, 1996, isagoo ah cunug kaliya. <ref>{{cite news|url=http://sports.khan.co.kr/entertainment/sk_index.html?art_id=201706230815003&sec_id=540301&pt=nv|title=[아이돌 고향을 찾아서①] 우리 고향 아이돌 누가 있을까|author=Son Min-ji|first=|date=June 23, 2017|work=Sports Khan|accessdate=November 12, 2018|language=ko}}</ref><ref>{{Cite web|url=http://news.donga.com/3/07/20160811/79708918/4|title=[블랙핑크 VS 투애니원③] 블랙핑크는 누구?|date=August 11, 2016|website=Donga|language=ko|access-date=November 13, 2018}}</ref><ref>{{Cite web|url=https://mnews.joins.com/article/22892780|title=The Reason Koreans Say "Whoa" by Hearing "Jennie Was Born in Cheongdam-dong"|date=August 17, 2018|website=JoongAng Ilbo|language=ko|access-date=June 21, 2019}}</ref>Markii ay siddeed sano jirsatay, waxay safar la tagtay iyada iyo qoyskeeda Australia iyo New Zealand.  Intii ay ku sugneyd New Zealand, hooyadeed waxay weydiisay inay jeceshahay meesha iyo haddii ay rabto inay sii joogto, Jennie waxay ku jawaabtay "haa".  Sannad kadib, waxaa loo direy inay wax ku dhigato Iskuulka Dhexe ee Waikowhai ee Auckland, New Zealand waxayna la nooshahay qoys guri-joog ah.<ref name=":2">{{Cite web|url=https://www.vlive.tv/video/42947|title=[V LIVE] 젠득타임🖤|website=V Live|language=en|access-date=July 9, 2019}}</ref>
 [[Category:Fan iyo Suugaan]]
