Wax mabedilin ee wxan saxay oo anka dhigay erayga waxbashada (wax barashada iyo macahadaka ( machadka) wa mhdsan tihiin dadkii sodiyariyey runahaan tii aad ayaan ugu farxay markan arkay qormdan. wax kalene mahan ee mrkan school kega digsiga sare dhamey hayey aya ardada wxa ladhahy ninwalba degmada owku dhasha lagaraba aniga mrkas wxn isdhahy. Garabla hdaa tiraa yaya qaan. Micnaha dadka iyo meshn jogay maheyn mel Garabla lagayaqn oo wxey eheyd Abgal dhexdisa bondhere mgceygu waa Ahmed-Nor Hussein

--- a/Garabla.mw
+++ b/Garabla.mw
@@ -7,11 +7,11 @@ Degmada Grabla waa Degmo ka tirsan Degmooyinka Gobolka galguduud ee  Bartamaha d
 
 W'''axyaabaha ay can ku tahay'''
 
-Degmaada garabla waxa ay caan ku tahay xoola dhaqashada, wax soosaarka beeraha, xoolaha waxay isgu jiraan ariga, lo’da, geela,idaha,dameeraha, Fardaha.Garabla dhul ahaan waxay iskugu jirtaa Dhul daaqsimeed iyo Dhul beereed, Degemada  waxa Degmo laga dhigay sanadkii 2012, waxa ayna noqotay degmada ugu xoolaha iyo wax soosaarka badan Gobolka Galgaduud, sidaas si la mid ah degmadu waxa aay ku caan tahahay Maamul wanaagga iyo Waxbashada iyo humar joogto ah.
+Degmaada garabla waxa ay caan ku tahay xoola dhaqashada, wax soosaarka beeraha, xoolaha waxay isgu jiraan ariga, lo’da, geela,idaha,dameeraha, Fardaha.Garabla dhul ahaan waxay iskugu jirtaa Dhul daaqsimeed iyo Dhul beereed, Degemada  waxa Degmo laga dhigay sanadkii 2012, waxa ayna noqotay degmada ugu xoolaha iyo wax soosaarka badan Gobolka Galgaduud, sidaas si la mid ah degmadu waxa aay ku caan tahahay Maamul wanaagga iyo Wax barashada iyo humar joogto ah.
 
 '''Waxbarashada'''
 
-Degmadu waxa ay leedahay Iskool Dugsiga hoose dhexe  iyo machadaka qaaliga ah ee AL-AQSA. oo ay Arday fara badan Ka qalin jabiyeen, kuwaas oo qaarkood ay wax ka bartaan Jaamcadaha caalamka iyo kuwa gudaha Dalka kuyaal.
+Degmadu waxa ay leedahay Iskool Dugsiga hoose dhexe  iyo machadka qaaliga ah ee AL-AQSA. oo ay Arday fara badan Ka qalin jabiyeen, kuwaas oo qaarkood ay wax ka bartaan Jaamcadaha caalamka iyo kuwa gudaha Dalka kuyaal.
 
 '''Caafimaadka'''
 
