*Empty MediaWiki Message*

--- a/Help:Wax_ka_bedelka.mw
+++ b/Help:Wax_ka_bedelka.mw
@@ -25,7 +25,7 @@ Beel kamid ah beelaha soomaaliyeed
 
 |-
 ! Ku dhashay:
-|[[Gobolka Bari]], [[Soomaaliya]]-->
+|[[Gobolka nugaal]], [[Soomaaliya]]-->
 |-
 ! Af Ingiriis (English):
 | Ali Saleban
