--- a/Axmed_Yasiin.mw
+++ b/Axmed_Yasiin.mw
@@ -1,12 +1,29 @@
-[[File:axmed yuusuf yaasiin.jpg|thumb|madax axmed yuusuf yaasiin|link=Special:FilePath/Axmed_yuusuf_yaasiin.jpg]]
+{{Short description|Madaxweyne ku xigeenka 5aad ee somaliland}}
+{{Infobox officeholder
+|name = Axmed yuusf yaasiin
+|image = 
+|caption = 
+|order         = [[Madaxweyne ku xigeenka somaliland|Madaxweyne ku xigeenka 5aad ee somaliland]]
+|president     = [[Daahir Rayaale Kaahin]]
+|term_start    = 2002
+|term_end      = July 2010
+|predecessor   = [[Daahir Rayaale Kaahin]]
+|successor     = [[Cabdiraxmaan Saylici]]
+|party         = [[Ururka Dimuqraadiga Ummadda Bahawday]]
+}}
+'''Axmed yuusf yaasiin'''  (ku dhashay [[Hargaysa]] 1957) waa siyaasi soomaaliyeed oo reer somaliland ah. Waxa uu somaliland ka soo noqday madaxweyne ku xigeen laga bilaabo 2002 ilaa 2010<ref>{{cite book|last1=Bahcheli|first1=Tozun|last2=Bartmann|first2=Barry|last3=Srebrnik|first3=Henry|title=De Facto States: The Quest for Sovereignty|url=https://books.google.com/books?id=Gk2QAgAAQBAJ|year=2004|publisher=Routledge|isbn=978-1-135-77121-8}}</ref><ref>{{Cite web|url=https://www.bbc.com/somali/news/story/2010/04/printable/100426_somland.shtml|title=Maqdaxweyne kuxigeenka Somaliland Axmed Yuusuf Yaasiin,|lang=so|website=BBC|access-date=17 February 2020}}</ref><ref>{{Cite web|url=https://geeska.net/axmed-yuusuf-yaasiin-oo-ka-hadlay-arrimo-kala-duwan/|title=Axmed Yuusuf Yaasiin Oo Ka Hadlay Arrimo Kala Duwan
+|lang=so|website=Geeska|access-date=17 February 2020}}</ref><ref>{{Cite web|url=https://somalilandtoday.com/2018/07/21/axmed-yuusuf-yaasiin-oo-ka-hadlay-shirkii-brussles-wada-hadallada-somaliland-iyo-soomaaliya-saami-qaybsiga-wakiilada-iyo-shirka-ceel-afweyn/|website=Somaliland Today|title=Axmed Yuusuf Yaasiin Oo Ka Hadlay Ka Qayb-galka Shirkii Brusels Ee Eng Faysal, Saami Qaybsiga Wakiilada Iyo Shirka Ceel-Afweyn|lang=so|access-date=17 February 2020}}</ref>.  wuxuu gudoomiyaha labaad ka ahaa xisbiga somaliland ee [[UDUB]]. wuxuun ka soo jeedaa Beelaha Aadan Ciise ee 
+Qabiilka Ciise Muuse.
 
 
 
-'''axmed yuusf yaasiin''' waa siyaasi u dhashay wadanka [[somaliland]] waana [[madaxwayne kuxigeen]] kii hore [[somaliland]] waxa uu madaxwayne ku xigeen u ahaa madaxwayne [[daahir riyaale kaahin]] waxana uu xilka haya waxa uu ku dhashay magaalada [[hargaysa]] sanadii 1957 wuxuuna ka soo jeedaa Beelaha Aadan Ciise ee 
 
-Qabiilka Ciise Muuse 
 
-<br />
+
+
+ 
+==Xigasho==
+{{reflist}}
 
 [[Category:Shaqsiyadaad]]
 [[Category:Halyeeyada somaliland]]
