--- a/Template:Cite_encyclopedia.mw
+++ b/Template:Cite_encyclopedia.mw
@@ -1,138 +1,120 @@
-{{Citation/core
-|Citation class=book
-
-|Surname1={{{last|{{{last1|{{{author|{{{author1|{{{authors|{{{surname|{{{surname1|}}}}}}}}}}}}}}}}}}}}}
-|Surname2={{{last2|{{{author2|{{{surname2|}}}}}}}}}
-|Surname3={{{last3|{{{author3|{{{surname3|}}}}}}}}}
-|Surname4={{{last4|{{{author4|{{{surname4|}}}}}}}}}
-|Surname5={{{last5|{{{author5|{{{surname5|}}}}}}}}}
-|Surname6={{{last6|{{{author6|{{{surname6|}}}}}}}}}
-|Surname7={{{last7|{{{author7|{{{surname7|}}}}}}}}}
-|Surname8={{{last8|{{{author8|{{{surname8|}}}}}}}}}
-|Surname9={{{last9|{{{author9|{{{surname9|}}}}}}}}}
-
-|Given1={{{first|{{{first1|{{{given|{{{given1|}}}}}}}}}}}}
-|Given2={{{first2|{{{given2|}}}}}}
-|Given3={{{first3|{{{given3|}}}}}}
-|Given4={{{first4|{{{given4|}}}}}}
-|Given5={{{first5|{{{given5|}}}}}}
-|Given6={{{first6|{{{given6|}}}}}}
-|Given7={{{first7|{{{given7|}}}}}}
-|Given8={{{first8|{{{given8|}}}}}}
-|Given9={{{first9|{{{given9|}}}}}}
-
-|Authorlink1={{{authorlink|{{{authorlink1|{{{author-link|{{{author1-link|}}}}}}}}}}}}
-|Authorlink2={{{authorlink2|{{{author2-link|}}}}}}
-|Authorlink3={{{authorlink3|{{{author3-link|}}}}}}
-|Authorlink4={{{authorlink4|{{{author4-link|}}}}}}
-|Authorlink5={{{authorlink5|{{{author5-link|}}}}}}
-|Authorlink6={{{authorlink6|{{{author6-link|}}}}}}
-|Authorlink7={{{authorlink7|{{{author7-link|}}}}}}
-|Authorlink8={{{authorlink8|{{{author8-link|}}}}}}
-|Authorlink9={{{authorlink9|{{{author9-link|}}}}}}
-
-|Coauthors={{{coauthors|{{{coauthor|}}}}}}
-
-|Other={{{others|}}}
-
-|Year={{{year|{{    <!-- attempt to derive year from date, if possible -->
-           #if: {{{date|}}}
-           |{{
-              #iferror:{{#time:Y|{{{date|}}} }}
-              |{{#iferror:{{#time:Y|{{{publication-date|einval}}} }}||{{#time:Y|{{{publication-date|}}} }}}}
-              |{{#time:Y|{{{date|}}} }}
-            }}
-           |{{{publication-date|}}} <!-- last resort -->
-         }}
-      }}}
-|YearNote={{{origyear|}}}
-|Date={{#if:{{{date|}}}|{{{date}}}|{{{day|}}} {{{month|}}} {{{year|{{{publication-date|}}}}}}}}
-
-|Title={{{encyclopedia|{{{title|}}}}}}
-|TransTitle={{{trans_chapter|}}}
-|TransItalic={{{trans_title|}}}
-|IncludedWorkTitle={{{title|{{{article|}}}}}}
-|language={{{language|}}}
-
-
-|URL={{#if:{{{archiveurl|}}}
-       |{{#ifeq: {{{deadurl|}}} | no | {{{url|}}} | {{{archiveurl|}}}}}
-       |{{{url|}}}
-     }}
-|IncludedWorkURL={{{chapter-url|{{{chapterurl|{{{contribution-url|}}}}}}}}}
-|AccessDate={{{accessdate|}}}
-|OriginalURL={{{url|}}}
-|ArchiveURL={{{archiveurl|}}}
-|ArchiveDate={{{archivedate|}}}
-|DeadURL={{{deadurl|}}}
-|format={{{format|}}}
-
-|At={{#if: {{{page|}}}|{{#if:{{{nopp|}}}||p.&nbsp;}}{{{page}}}
-      |{{#if: {{{pages|}}}|{{#if:{{{nopp|}}}||pp.&nbsp;}}{{{pages}}}
-      |{{{at|}}}}}
+<cite style="font-style:normal">{{
+#if:{{{author|}}}{{{last|}}}
+  |{{#if:{{{authorlink|}}}
+    |[[{{{authorlink}}}|{{
+    #if: {{{last|}}}
+      |{{{last}}}{{#if:{{{first|}}}|, {{{first}}}}}
+      |{{{author}}}
+    }}]]
+    |{{#if: {{{last|}}}
+      |{{{last}}}{{#if:{{{first|}}}|, {{{first}}}}}
+      |{{{author}}}{{#if:{{{coauthors|}}}
+        |
+        |
+        }}
     }}
+  }}{{
+  #if:{{{coauthors|}}}
+    |<nowiki>;</nowiki> {{{coauthors}}}
+  }}{{
+  #if:{{{date|}}}
+    |&#32;({{{date}}}).
+    |{{#if:{{{year|}}}
+      |{{#if:{{{month|}}}
+        |&#32;({{{month}}} {{{year}}}).
+        |&#32;({{{year}}}).
+      }}
+    }}
+  }}
+}}&#32;{{
+#if:{{{url|}}}
+  |"[{{{url}}} {{{article|{{{title}}}}}}]".
+  |{{
+  #if:{{{article|{{{title|}}}}}}
+    |"{{{article|{{{title}}}}}}".
+  }}
+}}{{
+#if:{{{encyclopedia|}}}{{{ency|}}}
+  |&#32;''{{{encyclopedia|{{{ency}}}}}}''
+}}{{
+#if:{{{edition|}}}
+  |&#32;({{{edition}}})
+}}{{
+#if:{{{volume|}}}
+  |&#32;'''{{{volume}}}'''
+}}.{{
+#if:{{{last|}}}{{{author|}}}
+  |&#32;
+  |{{
+  #if:{{{date|}}}
+    |&#32;({{{date}}}).
+    |{{#if:{{{year|}}}
+      |{{#if:{{{month|}}}
+        |&#32;({{{month}}} {{{year}}}).
+        |&#32;({{{year}}}).
+      }}
+    }}
+  }}
+}}{{
+#if:{{{editor|}}}
+  |&#32;Red. {{{editor}}}.
+}}{{
+#if:{{{publisher|}}}|{{
+  #if:{{{location|}}}
+    |&#32;{{{location}}}:
+  }}&#32;{{{publisher}}}.
+}}{{
+#if:{{{pages|}}}
+  |&#32;{{{pages}}}.
+}}{{
+#if:{{{doi|}}}
+  |&#32;[[Digital object identifier|DOI]]:[http://dx.doi.org/{{{doi}}} {{{doi}}}].
+}}{{
+#if:{{{id|}}}
+  |&#32;{{{id}}}.
+}}{{
+  #if: {{{isbn|}}} |&#32;ISBN {{{isbn}}}.
+}}{{
+  #if: {{{oclc|}}} |&#32;[[OCLC]] [http://worldcat.org/oclc/{{urlencode:{{{oclc}}}}} {{{oclc}}}].
+}}{{
+#if:{{{accessdate|}}}
+  |&#32;Hentet {{{accessdate}}}.
+  |{{
+  #if:{{{accessyear|}}}|{{
+    #if:{{{accessmonth|}}}
+      |&#32;Hentet {{{accessmonth}}} {{{accessyear}}}.
+      |&#32;Hentet{{{accessyear}}}.
+    }}
+  }}
+}}{{
+#if: {{{quote|}}}
+    | &nbsp;“{{{quote}}}”
+}}</cite><!--
 
-|Edition={{{edition|}}}
-|Series={{{series|{{{version|}}}}}}
-|Volume={{{volume|}}}
+This is a COinS tag (http://ocoins.info), which allows automated tools to parse the citation information:
+  --><span class="Z3988" title="ctx_ver=Z39.88-2004<!--
+  -->&rft_val_fmt={{urlencode:info:ofi/fmt:kev:mtx:dc}}<!--                     Field descriptions: http://www.openurl.info/registry/docs/mtx/info:ofi/fmt:kev:mtx:dc
+  -->&rft.type=encyclopediaArticle<!--                                          The nature or genre of the content of the resource.  (encyclopediaArticle chosen purely because it is recognized by Zotero.)
+  -->{{#if: {{{first|}}}        | &rft.aufirst={{urlencode:{{{first}}}}}       }}<!-- First author's given name or names or initials... may contain multiple words and punctuation, i.e. "Fred F", "Fred James"
+  -->{{#if: {{{last|}}}         | &rft.aulast={{urlencode:{{{last}}}}}         }}<!-- First author's family name. This may be more than one word ... i.e. Smith, Fred James is recorded as "aulast=smith"
+  -->{{#if: {{{author|}}}       | &rft.au={{urlencode:{{{author}}}}}           }}<!-- This data element contains the full name of a single author, i. e. "Smith, Fred M", "Harry S. Truman".
+  -->{{#if: {{{editor|}}}       | &rft.contributor={{urlencode:{{{editor}}}}}  }}<!-- An entity responsible for making contributions to the content of the resource. Examples of Contributor include a person, an organization, or a service.
+  -->&rft.title={{urlencode:{{{title|}}}}}<!--                                        A name given to the resource.
+  -->{{#if: {{{url|}}}          | &rft.identifier={{urlencode:{{{url}}}}}      }}<!-- URL 
+  -->{{#if: {{{format|}}}       | &rft.format={{urlencode:{{{format}}}}}       }}<!-- The physical or digital manifestation of the resource... may include the media-type or dimensions of the resource.
+  -->{{#if: {{{encyclopedia|}}} | &rft.source={{urlencode:{{{encyclopedia}}}}} }}<!-- A Reference to a resource from which the present resource is derived.
+  -->{{#if: {{{edition|}}}      | &rft.edition={{urlencode:{{{edition}}}}}     }}<!-- Statement of the edition of the book. This will usually be a phrase, with or without numbers, but may be a single number, e.g. "First edition", "4th ed." 
+  -->{{#if: {{{volume|}}}       | &rft.volume={{urlencode:{{{volume}}}}}       }}<!-- Volume designation usually expressed as a number but could be roman numerals or non-numeric, i.e. "124", or "VI".
+  -->{{#if: {{{publisher|}}}    | &rft.publisher={{urlencode:{{{publisher}}}}} }}<!-- An entity responsbile for making the resource available... person, an organization, or a service.
+  -->{{#if: {{{location|}}}     | &rft.place={{urlencode:{{{location}}}}}      }}<!-- Place of publication. "New York"
+  -->{{#if: {{{pages|}}}        | &rft.pages={{urlencode:{{{pages}}}}}         }}<!-- Start and end pages for parts (of a book), i.e. "124-147"
+  -->{{#if: {{{date|}}} 
+       | &rft.date={{urlencode:{{{date}}}}}
+       | {{#if: {{{year|}}}     | &rft.date={{urlencode:{{{year}}}}} }}        }}<!-- A date of an event in the lifecycle of the resource... typically the creation or availability of the resource. (ISO 8601)
+  -->{{#if: {{{language|}}}     | &rft.language={{urlencode:{{{language}}}}}   }}<!-- A language of the intellectual content of the resource. Recommended best practice is to use RFC 3066... in conjunction with ISO639
+  -->{{#if: {{{doi|}}}       | &rft_id=info:doi/{{urlencode:{{{doi}}}}}  }}<!-- DOI
+  -->{{#if: {{{isbn|}}}      | &rft.isbn={{{isbn}}}                      }}<!-- International Standard Book Number (ISBN) ... i.e. "057117678X" but it may contain hyphens, e.g. "1-878067-73-7"
+  -->{{#if: {{{oclc|}}}      | &rft_id=info:oclcnum/{{{oclc}}}           }}<!-- 
+  -->">&nbsp;</span><noinclude>
 
-|Publisher={{{publisher|}}}
-|Place={{{location|{{{place|}}}}}}
-|PublicationPlace={{{location|{{{place|{{{publication-place|}}}}}}}}}
-|PublicationDate={{{publication-date|}}}
-
-|EditorSurname1={{{editor-last|{{{editor1-last|{{{editor|{{{editors|{{{editor-surname|{{{editor1-surname|}}}}}}}}}}}}}}}}}}
-|EditorSurname2={{{editor2-last|{{{editor2-surname|}}}}}}
-|EditorSurname3={{{editor3-last|{{{editor3-surname|}}}}}}
-|EditorSurname4={{{editor4-last|{{{editor4-surname|}}}}}}
-|EditorGiven1={{{editor-first|{{{editor1-first|{{{editor-given|{{{editor1-given|}}}}}}}}}}}}
-|EditorGiven2={{{editor2-first|{{{editor2-given|}}}}}}
-|EditorGiven3={{{editor3-first|{{{editor3-given|}}}}}}
-|EditorGiven4={{{editor4-first|{{{editor4-given|}}}}}}
-|Editorlink1={{{editor-link|{{{editor1-link|}}}}}}
-|Editorlink2={{{editor2-link|}}}
-|Editorlink3={{{editor3-link|}}}
-|Editorlink4={{{editor4-link|}}}
-
-|ARXIV={{{arxiv|}}}
-|ASIN={{{asin|{{{ASIN|}}}}}}
-|ASIN-TLD={{{asin-tld|}}}
-|BIBCODE={{{bibcode|}}}
-|DOI={{{doi|{{{DOI|}}}}}}
-|DoiBroken={{{doi_brokendate|{{{doi_inactivedate|}}}}}}
-|ISBN={{{isbn|{{{ISBN|}}}}}}
-|ISSN={{{issn|{{{ISSN|}}}}}}
-|JFM={{{jfm|{{{JFM|}}}}}}
-|JSTOR={{{jstor|{{{JSTOR|}}}}}}
-|LCCN={{{lccn|{{{LCCN|}}}}}}
-|MR={{{mr|{{{MR|}}}}}}
-|OCLC={{{oclc|{{{OCLC|}}}}}}
-|OL={{{ol|{{{OL|}}}}}}
-|OSTI={{{osti|{{{OSTI|}}}}}}
-|PMC={{{pmc|{{{PMC|}}}}}}
-|PMID={{{pmid|{{{PMID|}}}}}}
-|RFC={{{rfc|{{{RFC|}}}}}}
-|SSRN={{{ssrn|{{{SSRN|}}}}}}
-|ZBL={{{zbl|}}}
-|ID={{{id|{{{ID|}}}}}}
-
-|laysummary={{{laysummary|}}}
-|laydate={{{laydate|}}}
-|laysource={{{laysource|}}}
-
-|quote={{{quote|}}}
-
-|Ref={{{ref|}}}
-
-|amp={{{lastauthoramp|}}}
-|AuthorMask={{{author-mask|{{{authormask|}}}}}}
-|AuthorSep={{#ifeq:{{{author-separator|}}}|;|&#059;|{{{author-separator|&#059;}}}}}&#32;
-|NameSep={{{author-name-separator|,}}}&#32;
-|PS={{#if:{{{quote|}}}||{{{postscript|.}}}}}
-|Sep={{#ifeq:{{{separator|{{{seperator}}} }}}|;|&#059;|{{{separator|{{{seperator|.}}} }}} }}
-|template doc demo={{{template doc demo|}}}
-|Trunc={{#if:{{{display-authors|}}}|{{{display-authors}}}|8}}
-}}{{#if:{{{access-date|}}}{{{accessdaymonth|}}}{{{accessday|}}}{{{accessmonthday|}}}{{{accessmonth|}}}{{{accessyear|}}}{{{dateformat|}}}{{{day|}}}{{{doilabel|}}}
-|[[Category:Pages containing cite templates with deprecated parameters|{{NAMESPACE}} {{PAGENAME}}]]}}<noinclude>
-{{documentation}}
-</noinclude>
+[[category:Tusmooyinka xigashada]]</noinclude>
