*Empty MediaWiki Message*

--- a/Ayaan_Xirsi_Cali.mw
+++ b/Ayaan_Xirsi_Cali.mw
@@ -14,11 +14,11 @@
 | spouse      = Niall Ferguson (hal cunug)
 }}
 
-'''Ayaan xirsi cali waa mid ka mid ah dadka dunida ugu caansan. Waa soomaaliyad waxaana dhalay aqoonyahankii waynaa ee xirsi magan ciise. 
+'''Ayaan xirsi cali'''  (ku dhalatay [[Muqdisho]] 13 Nofeembar [[1969]]<ref>{{cite web|url=https://www.britannica.com/biography/Ayaan-Hirsi-Ali|title=Ayaan Hirsi Ali|work=Britannica|access-date=1 January 2018}}</ref>) waa mid ka mid ah dadka dunida ugu caansan. waxay tahay qoraa, aqoonyahan iyo siyaasi hore<ref>{{cite news|title=Ayaan Hirsi Ali on Q&A: the west must stop seeing Muslims only as victims|url=https://www.theguardian.com/world/2016/may/17/ayaan-hirsi-ali-qanda-west-muslims-only-as-victims|accessdate=1 December 2016|work=The Guardian|date=16 May 2016}}</ref>.waa gabar soomaaliyad oo heesato dhalashada dalalka [[Holland]] iyo [[Maraykanka]], waxaana dhalay aqoonyahankii waynaa ee Xirsi Magan Ciise. Waxay soo caan baxday marka ee ka soo horjeesatay [[guurka qasabka ah]] , [[dil sharafeed|dil sharafeedka]] oo dhaqan ka ah dalal ku yaalo aasiya, [[guurka ilmaha]] iyo [[gudniin|gudniinka gabdhaha]]<ref>{{cite news|title=Ayaan Hirsi Ali: "You can't change these practices if you don't talk about them"|url=http://nytlive.nytimes.com/womenintheworld/2016/04/10/women-in-islam-you-cant-change-these-practices-if-you-dont-talk-about-them/|accessdate=24 February 2017|work=The New York Times|date=24 February 2017}}</ref><ref name="conversationswithbillkristol.org">{{cite web|url=http://conversationswithbillkristol.org/video/ayaan-hirsi-ali/|title=Ayaan Hirsi Ali on Conversations with Bill Kristol}}</ref>. Waxaa ay u ol'olaysa xuquuqda [[dumar]]ka, ayada oo aasaastay hayaad lagu magacaabo [[AHA Foundation]] (ururka AHA) .
 
-Ayaan waxay ku dhalatay magaca '''Ayaan Xirsi Magan''' (dhalatay 13 Nofeembar [[1969]], [[Muqdisho]], [[Soomaaliya]]). Waa naag asal ahaan ka soo jeeda wadanka [[Soomaaliya]], markii dambe sharci wadaniyad ka qaadatay wadanka [[Holland]], taasi oo u ol'olaysa xuquuqda [[dumar]]ka, muddana ahayd qoraa iyo siyaasiyad. Ayaan waxaa dhalay Xirsi Magan Ciise oo ahaa [[siyaasi]] iyo [[bare]]. Ayaan ayaa markay [[Qaarad|qaaradda]] [[Yurub]] tagtay waxay samaysay qoraallo iyo [[filim]]o ka soo horjeeda [[Islam|Diinta Islaamka]]. Qormooyinkeedii lidka ku ahaa Islaamka ayaa waxaa ugu caansanaa filimka ''[[Submission (film)|Submission]]'' ([[Is-Dullayn]]), iyo buugeedii ''[[Infidel (buug)|Infidel]]'' ([[Gaal]]), kuwaasoo ka caraysiiyey dadka Islaamka ah, sababyna in kooxo Islaam ahi ugu hanjabaan in la dilayo.
+Ayaan waxaa dhalay Xirsi Magan Ciise oo ahaa [[siyaasi]] iyo [[bare]]. Ayaan ayaa ku dhalatay diinta islaamka kadibneh way ka baxday diinta, waxayna noqotay mid aan diin laheen <ref>{{cite news|title=2015 National Convention Keynote Speaker|url=https://www.atheists.org/2014/07/american-atheists-islam-critic-womens-advocate-ayaan-hirsi-ali-to-be-2015-convention-keynote/|accessdate=10 October 2018|work=American Atheists|date=2014}}</ref>, kadibneh waxay bilaawday in ee diinta islaamka ka soo horjeesato. waxay samaysay qoraallo iyo [[filim]]o ka soo horjeeda [[Islam|Diinta Islaamka]]. Waxyaabha lidka ku ahaa Islaamka ayaa waxaa ugu caansanaa filimka [[Submission (film)|Submission]] oo ah filim yar ee la sameesay nin lagu magacaabo [[Theo van Gogh]],  ([[Is-Dullayn]]), iyo buugeedii ''[[Infidel (buug)|Infidel]]'' ([[Gaal]]), kuwaasoo ka caraysiiyey dadka Islaamka ah, sababyna in kooxo Islaam ahi ugu hanjabaan in la dilayo.
 
-Hanjabaadihii lala beegsaday Ayaan waxay ku khasbeen in ay ku hoos noolaato ilaalo iyo inay ku jirto dhuumaalaysi iyo baxsi ay nafteeda ku badbaadinayso, haseyeeshee waxay dhanka kale kaga kasbatay abaal marino dhowr ah kooxihii fikirkeeda aaminsanaa. Sanadkii [[2005]] waxaa Ayaan lagu xusay majaladda ''[[Majaladda Time|Time]]'' iyadoo joornaalkaasi ku daray Ina Xirsi Magan liiska [[100]] qof oo adduunka ugu dhiirranaa waqtigaas.
+Hanjabaadihii lala beegsaday Ayaan waxay ku khasbeen in ay ku hoos noolaato ilaalo iyo inay ku jirto dhuumaalaysi iyo baxsi ay nafteeda ku badbaadinayso, haseyeeshee waxay dhanka kale kaga kasbatay abaal marino dhowr ah kooxihii fikirkeeda aaminsanaa. Sanadkii [[2005]] waxaa Ayaan lagu xusay joornaalka ''[[Joornaalka Time|Time]]'' iyadoo joornaalkaasi ku daray Ina Xirsi Magan liiska [[100]] qof oo adduunka ugu dhiirranaa waqtigaas<ref name="time"/>.
 
 ==Dibadda tixraacyada==
 {{Commonscat|Ayaan Hirsi Ali}}
