*Empty MediaWiki Message*

--- a/Burundi.mw
+++ b/Burundi.mw
@@ -24,7 +24,7 @@
 |leader_title1 = [[List of Presidents of Burundi|President]]
 |leader_name1 = [[Évariste Ndayishimiye]]<ref name=cnn01/>
 |leader_title2 = [[Vice President of Burundi|1st Vice-President]]
-|leader_name2= Gaston Sindimwo
+|leader_name2= Prosper Bazombanza
 |leader_title3 = [[Vice President of Burundi|2nd Vice-President]]
 |leader_name3= Joseph Butore
 |legislature = [[Parliament of Burundi|Parliament]]
