*Empty MediaWiki Message*

--- a/Jennie.mw
+++ b/Jennie.mw
@@ -3,7 +3,7 @@ Jennie Kim (Kuuriyaan: 김제 니; (oo dhalatay Janaayo 16, 1996), oo si fiican 
 *[[YG Family]]|label=*YG Entertainment
 *Interscope Records|instrument=Cod|genre=*K-pop
 *dance-pop
-*hip hop music|origin=[[Seoul]], Koonfur Kuuriya|background=solo_singer<!--mandatory field must be formatted this way-->|website=<!-- {{URL|example.com}} -->|occupation=fanaand|image=Jennie Kim for Marie Claire Korea Magazine on October 9, 2018 (5).png<!--Please do not change without good reason. ALWAYS update the alt text. -->|birth_place=[[Seoul]], Koonfur Kuuriya <!-- Exact location disputed, see discussion on talkpage before changing.-->|birth_date={{birth date and age|1996|1|16}}|birth_name=Kim Jennie|native_name_lang=ko|native_name=제니|alt=Jennie faces forward in a white blouse against a red backdrop|caption=|module=}}
+*hip hop music|origin=[[Seoul]], Koonfur Kuuriya|background=solo_singer<!--mandatory field must be formatted this way-->|website=<!-- {{URL|example.com}} -->|occupation=fanaand|image=(180624) BLACKPINK fansign event at the AK Plaza in Bundang 08.jpg|birth_place=[[Seoul]], Koonfur Kuuriya <!-- Exact location disputed, see discussion on talkpage before changing.-->|birth_date={{birth date and age|1996|1|16}}|birth_name=Kim Jennie|native_name_lang=ko|native_name=제니|alt=|caption=|module=}}
 
 == shaqo ==
 Jennie waxay ku dhalatay kuna kortay [[Koonfur Kuuriya]], laakiin waxay markii dambe u dhaqaaqday inay wax ku barato [[New Zealand]] markay tahay sideed jir shan sano, Waxay oo soo noqotay Koonfur Kuuriya sanadka 2010 si ay u noqoto fanaand.
