*Empty MediaWiki Message*

--- a/Beesha_Ciise.mw
+++ b/Beesha_Ciise.mw
@@ -33,4 +33,6 @@ in ay CIISE gabadhiisu dhashay besha majeerteen taas oo iadna la yaraysan karin.
 in ay dagi jireen SAYLAC, LUGHAYA iyo BULAXAAR oo ay ila hada daganyihiin, in kastoo CIISUHU hada daganyahay 
 dhulbalaadhan oo xata ADDIS-ABABA(ETHIOPIA)dhawr boqol oo killo-meter u jiraa iyo DJIBOUTI.
 
+Sidoo kale Ciisuhu waxey Degaan Wanlaweyn waa magaalo ku taala koonfurbari gobolka[[Shabeellaha Hoose]] ee  [[Soomaaliya]]. Magaalada Wanlaweyn waxay ku taala 50 miyl (80 kilomitir) waqooyigalbeed ee caasimada [[Muqdisho]].
+
 {{gumud}}
