*Empty MediaWiki Message*

--- a/Blackpink.mw
+++ b/Blackpink.mw
@@ -28,11 +28,31 @@
 '''Blackpink''' ([[Hangul]]: 블랙 핑크; loo habeeyey sida BLACKPINK ama BLΛƆKPIИK) waa koox ka kooban 4 gabdhood oo xubno ka ah oo u dhashay kuuriyada koonfureed oo ay samaysatay [[YG Entertainment]], affarta xubnood waxay kala yihiin [[Jisoo]], [[Jennie]], [[Rosé]], iyo [[Lisa]].  Kooxdu ayaa ka dooday albumka ''Square One''  8-dii [[Agoosto]], [[2016]], kaas oo blackpink siiyay heeskoodi ugu horeeyay "''Whistle''", singlekaa ayaa sidoo kale ka mid ahaa heesta "Boombayah," oo ah heestoodi ugu horeesay oo ku jirta liiska ugu sareeya ee [[Billboard World Digital]], kaas oo dhigay rekoorka midka ugu daawashada badan ee uu soo saaray farshaxan u dhashay kuuriyada koonfureed. guushii ugu horreysay ee kooxdu ay ka gaadhay ganacsiga, waxaa loogu ammaanayaa inay yihiin Fannaaniinta Fanka ee Sannadka cusub markii la gaadho abaalmarinnada 31aad ee dahabiga ah ee loo yaqaan '[[golden Disc Awards]] iyo 26th [[Seoul Music Awards]].
 
 == Taariikhda fanka ==
-''[[Blackpink (EP)|Blackpink]]'' (2017)
 
-[[Square Up|''Square Up'']] (2018)
+=== 2016–2017 ===
+{{Multiple image|direction=vertical|align=right|width=240|image1=20161119 블랙핑크 멜론뮤직어워드 (1).jpg|caption1=Blackpink bisha Nofeembar 29, 2016|image2=블랙핑크(BlackPink) - 마지막처럼 171001 코리아뮤직페스티벌.jpg|caption2=Blackpink bisha Oktoobar 1, 2017}}Blackpink waxay sameysteen kulankoodii ugu horreeyay bishii Ogosto 8, 2016 sameeyay [[YG Entertainment,|YG Entertainment]]<ref>{{cite web|url=http://entertain.naver.com/read?oid=109&aid=0003347383|title=YG 새 걸그룹, '블랙 핑크' 이름의 뜻은?[YG 새 걸그룹 최종발표③]|access-date=August 12, 2016|date=June 29, 2016|author=Choi Na-young|work=OSEN|language=ko}}</ref><ref>{{cite web|url=http://entertain.naver.com/music/now/read?oid=108&aid=0002536916|title=YG新걸그룹은 4인조 '블랙핑크'..최종멤버 이미 밝힌 4인|author=Gil Hye-seong|date=June 29, 2016|work=Star News|accessdate=June 29, 2016|language=ko}}</ref><ref name=":0" /> waxay soo saareen albumkoodii hal oo ugu horreeyay ''[[Square One]]'', iyo heesaha "[[Boombayah]]" iyo "[[Whistle]]"<ref name=":02">{{cite web|url=http://kpopherald.koreaherald.com/view.php?ud=201608091630134122942_2|title=YG Entertainment unveils K-pop group BLACKPINK|author=Kim Yu-young|date=August 9, 2016|website=Kpop Herald|access-date=August 12, 2016}}</ref><ref>{{cite web|url=http://mwave.interest.me/en/kpop-news/article/107611/blackpink-sweeping-charts-within-2-days-of-debut-all-kpop-news|title=BLACKPINK Sweeping Charts Within 2 Days of Debut|author=Jeon Su Mi|date=August 10, 2016|website=Mwave|access-date=August 13, 2016}}</ref>,
 
-''[[Kill This Love]]'' (2019)
+Blackpink waxay soo saartay albumkeedii labaad ee ''[[Square Two]]'' iyo heesaha "[[Playing with Fire]]" iyo "[[Stay]]" bisha Nofeembar 1, 2016,
+
+Guusha ganacsi ee Blackpink shantii bilood ee ugu horreysay waxay ka heshay dhowr abaalmarino rookie ah abaalmarinno muusiko oo ku saabsan dhamaadka sanadka Korea, oo ay ku jiraan [[Asia Artist Awards]],<ref>{{cite web|url=http://tvdaily.asiae.co.kr/read.php3?aid=14793008471181924002|title='AAA' 조진웅∙엑소 대상…방탄소년단∙박보검∙윤아 2관왕 [종합]|date=November 16, 2016|website=TV Daily|access-date=January 4, 2018}}</ref> [[Melon Music Awards]],<ref>{{cite web|url=https://entertainment.mb.com.ph/2016/11/21/exo-bts-twice-triumph-at-melon-music-awards/|title=EXO, BTS, TWICE triumph at Melon Music Awards|last=Hicap|first=Jonathan|date=November 21, 2016|website=[[Manila Bulletin]]|access-date=January 4, 2019}}</ref> [[Golden Disc Awards]],<ref>{{cite web|url=http://www.sbs.com.au/popasia/blog/2016/11/25/31st-golden-disk-awards-nominations-are-revealed-0|title=The 31st Golden Disk Awards nominations are revealed|accessdate=December 17, 2016}}</ref> [[Seoul Music Awards]],<ref>{{cite web|url=http://seoulmusicawards.com|title=ASeoul Music Awards|website=Seoul Music Awards|access-date=December 17, 2016|url-status=dead|archiveurl=https://web.archive.org/web/20131214235343/http://www.seoulmusicawards.com/|archivedate=December 14, 2013|df=}}</ref> iyo [[Gaon Chart Music Awards]].<ref>{{cite web|url=https://pop.heraldcorp.com/view.php?ud=201702221804111352245_1|title=[6th 가온차트]"더 없이 공정했다"..엑소 4관왕·블랙핑크 3관왕(종합)|date=February 22, 2017|website=Herald Pop|access-date=January 4, 2018|url-status=dead|archiveurl=https://web.archive.org/web/20171007170233/http://pop.heraldcorp.com/view.php?ud=201702221804111352245_1|archivedate=October 7, 2017|df=}}</ref>
+
+Bishii Juun 22, 2017 kooxd waxay soo saartay heesta "As If It's Your Last".<ref>{{cite web|url=https://www.koreatimes.co.kr/www/art/2017/06/682_231754.html|title=BLACKPINK reveals digital single before Japanese showcase|work=The Korea Times|date=June 22, 2017|last=Kim|first=Jae-heun}}</ref>
+
+=== 2018–2019 ===
+{{Multiple image|direction=vertical|align=left|width=250|image1=180221 Black Pink for Marie Claire Korea Magazine.png|caption1=Blackpink bisha Febraayo 21, 2018|image2=180624 블랙핑크 분당 AK플라자 팬사인회 1.jpg|caption2=Blackpink bisha Juun 24, 2018.}}Juun 15, 2018 kooxdu waxay siidaysay [[Extended play|EP]]-kooriyadeedii ugu horreeyay ''Square Up,'' iyo heesta "Ddu-Du Ddu-Du" <ref>{{cite web|url=https://www.billboard.com/articles/columns/k-town/8461197/blackpink-square-up-ep-ddu-du-ddu-du-video|title=BlackPink Release 'Square Up' EP Fronted by Sharp-Shooting 'Ddu-Du Ddu-Du' Music Video|work=Billboard|last=Herman|first=Tamar|accessdate=June 15, 2018}}</ref><ref>{{cite web|url=http://www.officialcharts.com/chart-news/years-and-years-if-youre-over-me-hits-number-1-on-the-official-trending-chart__23191/|title=Years and Years' If You're Over Me hits Number 1 on the Official Trending Chart|work=[[Official Charts Company|Official Charts UK]]|last=Copsey|first=Rob|accessdate=June 22, 2018}}</ref>
+
+Bishii Sebtember 2018, Fannaanda Ingiriiska [[Dua Lipa]] ayaa ku dhawaaqay "Kiss and Make Up", oo kaashanaysa shirkadda Blackpink, heesta ayaa la sii daayay bishii Oktoobar 19, 2018<ref>{{cite web|url=https://www.iheart.com/content/2018-09-04-dua-lipa-announces-blackpink-collab-kiss-and-make-up-get-the-details/|title=Dua Lipa Announces Blackink Collab 'Kiss And Make Up': Get The Details|first=Hayden|last=Brooks|date=September 4, 2018|accessdate=October 30, 2018|publisher=[[iHeartMedia]]}}</ref>.
+
+Blackpink saddexaad [[Extended play|EP]], '' [[Kill This Love]] '', ayaa la sii daayay Abriil 5, 2019 <ref>{{cite web|url=http://www.koreaherald.com/view.php?ud=20190325000285|title=BLACKPINK to drop new album, "Kill This Love," next month|last=|first=|date=March 25, 2019|website=[[The Korea Herald]]|access-date=March 25, 2019}}</ref>
+
+=== 2020 ===
+Abriil 22, waxaa la xaqiijiyey inay kooxdu ku jiri doonto [[Lady Gaga]] albumkiisa lixaad ee ''[[Chromatica]]'', oo ku taal heesta "[[Sour Candy]]", oo la sii daayay May 28, 2020<ref>{{cite magazine|url=https://www.billboard.com/articles/columns/pop/9363808/lady-gaga-chromatica-official-track-list|title=Lady Gaga Confirms 'Chromatica' Track List, With Some Star-Studded Guests|last=Daw|first=Stephen|magazine=Billboard|accessdate=April 22, 2020|date=April 22, 2020}}</ref><ref>{{cite web|url=https://www.sbs.com.au/popasia/blog/2020/06/08/blackpink-hit-aria-top-10-lady-gagas-sour-candy|title=BLACKPINK hit ARIA Top 10 with Lady Gaga's "Sour Candy"|publisher=[[SBS PopAsia]]|date=June 8, 2020|accessdate=June 14, 2020}}</ref>
+
+Bishii Meey 18, YG Entertainment wuxuu ku dhawaaqay kooxda inay sii deyn doonto hees bisha Juun, oo ay ku xigto sii deyn dheeri ah inta u dhaxaysa Luulyo iyo Ogosto, si ay u horumariyaan albumkoodii ugu horreeyay ee dherer ah oo ay ku jiraan ugu yaraan 10 hees bishii Sebtember.<ref>{{citeweb|url=https://star.mt.co.kr/view.html?gnb=news&snb=search&no=2020050410445616469|title=[단독] 블랙핑크, 6월 컴백..YG "정확한 날짜 팬들에게"(종합)|date=May 4, 2020|accessdate=May 4, 2020|language=ko|website=Star News|last=Moon|first=Wan-sik}}</ref><ref>{{cite web|url=https://sports.donga.com/article/all/20200518/101093085/1|title=블랙핑크 측 “첫 정규앨범 작업 끝…오는 9월 발표 예정” [공식]|website=Sports Dongha|accessdate=May 18, 2020}}</ref>
+
+ka dib markii la siidaayay albumkii buuxa ee ugu horreeyay ee kooxda, [[Rosé]], [[Lisa]], iyo [[Jisoo]] waxay sii deyn lahaayeen barnaamijyadooda keli ah markii ay diyaar yihiin, iyadoo albumka Rosé uu marka hore sii deyn doono.<ref>{{cite web|url=http://www.mydaily.co.kr/new_yk/html/read.php?newsid=202006010910858499&ext=na|title=[공식입장] YG "블랙핑크, 로제·리사·지수 솔로곡 낸다…9월 정규앨범 이후 순차 발표"|publisher=Mydaily|date=June 1, 2020|accessdate=June 14, 2020}}</ref>
+
+Juun 10, boodhadh shaashad ku dhawaaqaya heesta, oo markii dambe shaaca laga qaaday oo cinwaan looga dhigay "How You Like That", ayaa lagu sii daayay dhammaan baraha bulshada ee warbaahinta, oo ay taariikhdu xustay 26-ka Juun.<ref>{{cite web|url=http://sports.hankooki.com/lpage/entv/202006/sp20200610112119136690.htm?s_ref=nv|title=[공식입장] YG "블랙핑크, 로제·리사·지수 솔로곡 낸다…9월 정규앨범 이후 순차 발표"|publisher=Sports Hankooki|date=June 10, 2020|accessdate=June 14, 2020}}</ref><ref>{{cite web|url=http://www.spotvnews.co.kr/?mod=news&act=articleView&idxno=362515|title='컴백 D-10' 블랙핑크, '하우 유 라이크 댓' 타이틀 포스터 공개|publisher=SpotvNews|date=June 16, 2020|accessdate=June 17, 2020}}</ref>
 
 == xubnaha ==
 
