--- a/Blackpink.mw
+++ b/Blackpink.mw
@@ -54,6 +54,13 @@ ka dib markii la siidaayay albumkii buuxa ee ugu horreeyay ee kooxda, [[Rosé]],
 
 Juun 10, boodhadh shaashad ku dhawaaqaya heesta, oo markii dambe shaaca laga qaaday oo cinwaan looga dhigay "How You Like That", ayaa lagu sii daayay dhammaan baraha bulshada ee warbaahinta, oo ay taariikhdu xustay 26-ka Juun.<ref>{{cite web|url=http://sports.hankooki.com/lpage/entv/202006/sp20200610112119136690.htm?s_ref=nv|title=[공식입장] YG "블랙핑크, 로제·리사·지수 솔로곡 낸다…9월 정규앨범 이후 순차 발표"|publisher=Sports Hankooki|date=June 10, 2020|accessdate=June 14, 2020}}</ref><ref>{{cite web|url=http://www.spotvnews.co.kr/?mod=news&act=articleView&idxno=362515|title='컴백 D-10' 블랙핑크, '하우 유 라이크 댓' 타이틀 포스터 공개|publisher=SpotvNews|date=June 16, 2020|accessdate=June 17, 2020}}</ref>
 
+== Saamayn ==
+Bishii Janaayo 2019, fiidiyowga muusikada ee "Ddu-Du Ddu-Du" wuxuu noqday fiidiyowga muusikada ee aadka loo daawado ee koox Koonfur Kuuriya <ref>{{cite web|url=https://www.billboard.com/articles/columns/k-town/8494591/blackpink-ddu-du-ddu-du-most-viewed-music-video-kpop-youtube|title=Blackpink's 'Ddu-Du Ddu-Du' Becomes Most-Viewed Music Video From a K-Pop Group on YouTube|date=January 23, 2019|work=Billboard|accessdate=November 13, 2019|first=Tamar|last=Herman}}</ref> Bishii Nofeembar 2019, fiidiyowgu wuxuu dhaafay hal bilyan oo aragti.<ref>{{cite web|url=https://www.forbes.com/sites/bryanrolli/2019/11/11/blackpinks-ddu-du-ddu-du-becomes-first-k-pop-group-video-to-earn-1-billion-youtube-views/|title=Blackpink’s ‘Ddu-Du Ddu-Du’ Becomes First K-Pop Group Video To Earn 1 Billion YouTube Views|work=Forbes|date=November 11, 2019|first=Bryan|last=Rolli|accessdate=November 13, 2019}}</ref> Bishii Sebtembar 2019, Blackpink wuxuu noqday kooxda muusikada oo leh tirada ugu badan ee macaamiisha ku leh [[Youtube|YouTube]]<ref>{{Cite web|url=https://www.straitstimes.com/lifestyle/entertainment/blackpink-are-music-group-with-highest-number-of-youtube-subscribers|title=Blackpink are music group with highest number of YouTube subscribers|date=September 10, 2019|website=The Straits Times|access-date=November 4, 2019}}</ref>
+
+Blackpink waxay ka dhigtay ''[[Time Magazine]]'' "Time 100 Next", oo ah liistada 100 fannaane ee soo kordhay, oo ay soo saartay sanadkan Magazine.<ref>{{Cite news|url=http://koogle.tv/media/news/blackpink-makes-time-magazines-newly-launched-100-next-list/|title=BLACKPINK makes Time magazine's newly launched '100 Next' list|last=|first=|date=November 14, 2019|work=KoogleTV|access-date=November 14, 2019}}</ref><ref>{{Cite web|url=https://time.com/collection/time-100-next-2019/5718842/blackpink/|title=TIME 100 Next 2019: Blackpink|website=Time|language=en-us|access-date=November 15, 2019}}</ref>
+
+Bishii Nofeembar 22, 2019, Blackpink wuxuu gaadhay 9,604,061 '[[Spotify]]', dhaaftay Fifth Harmony iyo Little Mix<ref>{{Cite news|url=http://koogle.tv/media/news/blackpink-is-most-followed-girl-group-on-spotify-surpassing-fifth-harmony-and-little-mix/|title=BlackPink is Most Followed Girl Group on Spotify, Surpassing Fifth Harmony and Little Mix|last=|first=|date=November 22, 2019|work=KoogleTV|access-date=November 25, 2019}}</ref><ref>{{Cite news|url=http://www.osen.co.kr/article/G1111264902|title=블랙핑크, 스포티파이서 전세계 걸그룹 팔로워수 1위..피프스 하모니 넘었다[Oh!쎈 레터]|last=|first=|date=November 21, 2019|work=OSEN|access-date=November 25, 2019}}</ref>
+
 == xubnaha ==
 
 * [[Jisoo]]
