--- a/Blackpink.mw
+++ b/Blackpink.mw
@@ -59,7 +59,27 @@ Bishii Janaayo 2019, fiidiyowga muusikada ee "Ddu-Du Ddu-Du" wuxuu noqday fiidiy
 
 Blackpink waxay ka dhigtay ''[[Time Magazine]]'' "Time 100 Next", oo ah liistada 100 fannaane ee soo kordhay, oo ay soo saartay sanadkan Magazine.<ref>{{Cite news|url=http://koogle.tv/media/news/blackpink-makes-time-magazines-newly-launched-100-next-list/|title=BLACKPINK makes Time magazine's newly launched '100 Next' list|last=|first=|date=November 14, 2019|work=KoogleTV|access-date=November 14, 2019}}</ref><ref>{{Cite web|url=https://time.com/collection/time-100-next-2019/5718842/blackpink/|title=TIME 100 Next 2019: Blackpink|website=Time|language=en-us|access-date=November 15, 2019}}</ref>
 
-Bishii Nofeembar 22, 2019, Blackpink wuxuu gaadhay 9,604,061 '[[Spotify]]', dhaaftay Fifth Harmony iyo Little Mix<ref>{{Cite news|url=http://koogle.tv/media/news/blackpink-is-most-followed-girl-group-on-spotify-surpassing-fifth-harmony-and-little-mix/|title=BlackPink is Most Followed Girl Group on Spotify, Surpassing Fifth Harmony and Little Mix|last=|first=|date=November 22, 2019|work=KoogleTV|access-date=November 25, 2019}}</ref><ref>{{Cite news|url=http://www.osen.co.kr/article/G1111264902|title=블랙핑크, 스포티파이서 전세계 걸그룹 팔로워수 1위..피프스 하모니 넘었다[Oh!쎈 레터]|last=|first=|date=November 21, 2019|work=OSEN|access-date=November 25, 2019}}</ref>
+Bishii Nofeembar 22, 2019, Blackpink wuxuu gaadhay 9,604,061 '[[Spotify]]', dhaaftay [[Fifth Harmony]] iyo [[Little mix|Little Mix]]<ref>{{Cite news|url=http://koogle.tv/media/news/blackpink-is-most-followed-girl-group-on-spotify-surpassing-fifth-harmony-and-little-mix/|title=BlackPink is Most Followed Girl Group on Spotify, Surpassing Fifth Harmony and Little Mix|last=|first=|date=November 22, 2019|work=KoogleTV|access-date=November 25, 2019}}</ref><ref>{{Cite news|url=http://www.osen.co.kr/article/G1111264902|title=블랙핑크, 스포티파이서 전세계 걸그룹 팔로워수 1위..피프스 하모니 넘었다[Oh!쎈 레터]|last=|first=|date=November 21, 2019|work=OSEN|access-date=November 25, 2019}}</ref>
+
+== Falanqeeyaha ==
+Bishii Abriil 2019, Blackpink iyo 40ka doolar ee aad dooratay kan ugu weyn ee loo yaqaan Bridge Bridge ee Masiibooyinka National ee loogu talagalay in lagu xasilo dhibanayaashii dabkii ka dhacay Sokcho ee Koonfur Kuuriya.<ref>{{Cite web|url=http://m.kukinews.com/m/m_article.html?no=650112|script-title=ko:[단독] 위너 김진우, 강원도 산불 피해에 1000만원 기부|work=Kuki News|date=April 8, 2019|access-date=April 8, 2019|language=ko}}</ref>
+
+== Taageerida ==
+[[File:181119_Acara_Puncak_Road_to_Shopee_12.12_Birthday_Sale,_Special_Performance_dari_BlackPink.jpg|alt=Four members of Blackpink, cropped thighs up, stand against an orange background, with their logo beneath them|thumb|250x250px]]
+Kooxda ayaa taageertay kuna duubtay dhowr nooc oo ay ka mid yihiin [[Puma]],<ref>{{cite web|url=http://ygex.jp/news_detail.php?id=1060569&artist_cd=BLAPI|website=[[YGEX]]|accessdate=July 7, 2018|title=4/19（木）～グローバル スポーツブランド「PUMA」の新商品「PUMA SUEDE BOW」（プーマ スウェード ボウ）のイメージモデルに決定！|date=April 17, 2018|language=ja}}</ref> [[Reebok]],<ref>{{cite web|url=http://kpopherald.koreaherald.com/view.php?ud=201611071535539995969_2|website=Kpop Herald|accessdate=March 14, 2017|title=Black Pink show off their sneaker game|publisher=Korea Herald}}</ref> [[Louis Vuitton]],<ref>{{cite web|url=http://www.yg-life.com/archives/100248?lang=en|website=YG Life|accessdate=July 7, 2018|title="TAEYANG· WINNER· BLACKPINK·CL"… Artists From YG Gathers For The 'First Time' [PICTORIAL]|date=March 19, 2018}}</ref> [[Adidas]], [[Dior|Dior Cosmetics]],<ref name="BPDIOR">{{cite web|url=http://ellegirl.jp/article/b_dior_blackpink_17_0821/1/|title=Black pink first appearance! Get a lip that rocks the heart with the new lip "Rouge Dior Liquid"|publisher=[[Elle Girl|Elle Girl Japan]]|date=August 9, 2017|accessdate=July 11, 2018|language=ja}}</ref> Moonshot,<ref>{{cite web|url=http://news.chosun.com/site/data/html_dir/2016/08/09/2016080901407.html|website=Chosun.com|accessdate=March 14, 2017|script-title=ko:블랙핑크, 데뷔하자마자 핫 '광고계 관심'|language=ko|publisher=The Chosun Ilbo}}</ref> St. Scott London,<ref>{{cite web|url=http://www.fashionseoul.com/?p=122282|website=Fashion Seoul|accessdate=March 14, 2017|title=세인트스코트, 새 얼굴에 YG신예 '블랙핑크'|language=ko|date=September 7, 2016}}</ref> [[109 (dukaan)|Shibuya 109]],<ref>{{cite web|url=https://109news.jp/shibuya/20171222/109187/?detail|title=2018 New Year's 109 BLACKPINK and iKON|website=109 News|publisher=[[109 (department store)|Shibuya 109]]|date=December 22, 2017|accessdate=July 11, 2018|language=ja}}</ref> [[Tokyo Girls Collection]] x CECIL McBEE,<ref>{{cite web|url=https://109news.jp/fashion/20180331/114420/?detail|website=109 News|publisher=[[109 (department store)|Shibuya 109]]|accessdate=July 11, 2018|title=Serious announcement from the Korean Girls Group BLACKPINK and CECIL McBEE that the world draws attention!|language=ja|date=March 31, 2018}}</ref> iyo [[Sprite]] Korea.<ref>{{cite web|url=https://www.koreadispatch.com/2018/05/11/seoul-sarah-woo-do-hwan-and-black-pinks-sprite-cf-is-now-out/|website=Korea Dispatch|date=May 11, 2018|accessdate=July 7, 2018|title=Woo Do Hwan and Black Pink's 'SPRITE CF' is now out!}}</ref>
+
+== Discography ==
+{{main|Blackpink discography}}
+
+* ''[[Blackpink in Your Area]]'' (2018)
+
+== Filmography ==
+
+* ''[https://en.m.wikipedia.org/wiki/Blackpink_House Blackpink House]'' (2018, [https://en.m.wikipedia.org/wiki/Vlive Vlive] / [[YouTube]] / [https://en.m.wikipedia.org/wiki/JTBC JTBC]2)<ref>{{Cite news|url=http://entertain.naver.com/now/read?oid=311&aid=0000807979|script-title=ko:[공식] 블랙핑크 첫 리얼리티 '블핑하우스', 1월6일 첫방…12회 방송|access-date=January 5, 2018|language=ko}}</ref>
+* ''[https://en.m.wikipedia.org/wiki/YG_Future_Strategy_Office YG Future Strategy Office]'' (2018, [[Netflix]])<ref>{{Cite web|url=http://www.osen.co.kr/article/G1111003175|title='YG전자' 승리가 이끈 YG 셀프디스, B급유머 폭발..박봄·남태현 등장(종합)[Oh!쎈 리뷰]|website=OSEN|language=ko|access-date=October 5, 2018|date=October 5, 2018}}</ref>
+* ''Blackpink X Star Road'' (2018, Vlive)
+* ''Blackpink Diaries'' (2019, Vlive / YouTube)
+* ''24/365 with Blackpink'' (2020, YouTube)<ref name="a">{{Cite web|url=http://pop.heraldcorp.com/view.php?ud=202006131006105562067_1|title=블랙핑크, 새 단독 리얼리티 론칭…팬들과 적극 소통한다|website=Herald Pop|language=ko|access-date=June 13, 2020|date=June 13, 2020}}</ref>
 
 == xubnaha ==
 
