*Empty MediaWiki Message*

--- a/Caad.mw
+++ b/Caad.mw
@@ -1,7 +1,7 @@
 [[File:Cumulus clouds panorama.jpg|thumb|upright=2|daruuro, Australia]]
 [[File:Morning Sky 7.jpg|thumb|Daruur da'day oo aad u fog]]
 [[File:Mixed clouds over Santa Clarita, CA.jpg|thumb|daruur meel dhexaad ah]]
-'''Caad''' waa dagmo ku taal gobolka [[Mudug]] waxay ku dhawdahay magalada xarardhere waxay ujirta 35 kiilo mitir inta badan waxa badeecada looga keenaa magalada galkacyo waxayna hoos tagtaa mamulka '''''Galmudug''''' waxaana daga beesha '''Ceyr''' iyo beesha [[Saleebaan]]. waa degmo cimilo ahaan aad u qabow. waa degmo kuhoreysa waxsoosaarka dhanka beeraha gaar ahaan digirta, haruurka iyo khudradda sidoo kale waa degmo ku haboon dhaqashada xoolaha nool waana mid kamid ah degmooyinka ugu wax soo saarka wanaagsan gobolka mudug.
+'''Caad''' waa dagmo ku taal gobolka [[Mudug]] waxay ku dhawdahay magalada xarardhere waxay ujirta 35 kiilo mitir inta badan waxa badeecada looga keenaa magalada galkacyo waxayna hoos tagtaa Ururka islaamiga ah ee [[Al-Shabaab]] waxaana daga beesha '''Ceyr''' iyo beesha [[Saleebaan]]. waa degmo cimilo ahaan aad u qabow. waa degmo kuhoreysa waxsoosaarka dhanka beeraha gaar ahaan digirta, haruurka iyo khudradda sidoo kale waa degmo ku haboon dhaqashada xoolaha nool waana mid kamid ah degmooyinka ugu wax soo saarka wanaagsan gobolka mudug.
 
 Degmada waxaa kadhisan Dugsiga H/dhexe iyo sare ee '''''MIICAAD''''' waxaana dhisay jamciyadda AL - TACAAWUN ee horumarinta bulshada, sidoo kale degmada waxaa kuyaal dugsiyo kale iyo isbitaal.
 
