*Empty MediaWiki Message*

--- a/Pierre_Nkurunziza.mw
+++ b/Pierre_Nkurunziza.mw
@@ -1,4 +1,47 @@
-[[File:President Nkurunziza of Burundi (6920275109) (cropped).jpg|thumb]]
-'''Pierre Nkurunziza''' (18 Diseembar 1964 - 8 Juun 2020) wuxuu ahaa siyaasi reer Burundi ah oo soo noqday madaxweynaha sagaalaad ee [[Burundi]] muddo ku dhow 15 sano laga soo bilaabo bishii Agoosto 2005 illaa dhimashadiisii Juun 2020. Wuxuu xubin ka ahaa qowmiyadda Hutu, Nkurunziza wuxuu baray waxbarashadda jirdhiska ka hor inta uusan ku lug yeelan siyaasadda intii lagu jiray Dagaalkii Sokeeye ee Burundi qayb ahaan. Golaha Mucaaradka Qaranka ee Difaaca Dimuqraadiyadda - Ciidamada Difaaca Dimuqraadiyadda (CNDD –FDD) oo uu hoggaamiye u noqday 2000. CNDD –FDD waxay noqotay xisbi siyaasadeed dhammaadkii Dagaalkii Sokeeye waxaana loo doortay Nkurunziza . Wuxuu qabtay jagada sedex arrimood, taasoo dhalisay deganaansho la’aan baahsan oo shacabka ka jirtay sanadkii 2015. Wuxuu ku dhawaaqay rabitaankiisa ah inuusan isu taagi doonin doorashada 2020 wuxuuna taa badalkeeda u cadeeyay dayvariste Ndayishimiye oo ah murashaxnimadiisa uu taageeray. Wuxuu si lama filaan ah u dhintay 8dii Juun 2020 waxyar ka hor dhammaadka rasmiga ah ee muddada xilkiisa. Wuxuu ahaa madaxweynihii ugu muddada dheeraa taariikhda dalka Burundi.
-[[Category:Gumud]]
-[[Category:Afrika]]
+{{short description|Burundian politician and former president}}
+{{Use dmy dates|date=June 2020}}
+{{Infobox officeholder
+| honorific-prefix    = 
+| name                = Pierre Nkurunziza
+| image               = Pierre_Nkurunziza_2014_press_conference_(cropped).jpg
+| caption             = Nkurunziza pictured in 2014
+| office              = [[President of Burundi]]
+| vicepresident       = First Vice-Presidents<br/>[[Martin Nduwimana]]<br/>[[Yves Sahinguvu]]<br/>[[Therence Sinunguruza]]<br/>[[Bernard Busokoza]]<br/>[[Prosper Bazombanza]]<br/>[[Gaston Sindimwo]]
+| term_start          = 26 August 2005
+| term_end            = 8 June 2020
+| predecessor         = [[Domitien Ndayizeye]]
+| successor           = [[Évariste Ndayishimiye]]
+| birth_date          = {{birth date|1964|12|18|df=y}}
+| birth_place         = [[Bujumbura]], [[Kingdom of Burundi|Burundi]]
+| death_date          = {{death date and age|2020|6|8|1964|12|18|df=y}}
+| death_place         = [[Karuzi]], [[Burundi]]
+| party               = [[National Council for the Defense of Democracy–Forces for the Defense of Democracy|CNDD–FDD]]
+| spouse              = {{marriage|[[Denise Bucumi]]|1994}}
+| children            = 6
+| alma_mater          = [[University of Burundi]]
+| website             = [http://www.presidence.gov.bi/ Official website]
+| signature           = Pierre Nkurunziza signature.png
+}}
+
+'''Pierre Nkurunziza''' (18 Diseembar 1964 - 8 Juun 2020) wuxuu ahaa siyaasi reer Burundi ah oo soo noqday madaxweynaha sagaalaad ee [[Burundi]] muddo ku dhow 15 sano laga soo bilaabo bishii Agoosto 2005 illaa dhimashadiisii Juun 2020. Wuxuu xubin ka ahaa qowmiyadda [[Hutu]], Nkurunziza wuxuu bartay waxbarashadda jirdhiska ka hor inta uusan ku lug yeelan siyaasadda intii lagu jiray [[Dagaalkii Sokeeye ee Burundi]]. Golaha Mucaaradka Qaranka ee Difaaca Dimuqraadiyadda - Ciidamada Difaaca Dimuqraadiyadda (CNDD –FDD) oo uu hoggaamiye u noqday sanadkii 2000. CNDD –FDD waxay noqotay xisbi siyaasadeed dhammaadkii Dagaalkii Sokeeye, waxaana loo doortay Nkurunziza . Wuxuu qabtay jagada sedex arrimood, taasoo dhalisay deganaansho la’aan baahsan oo shacabka ka jirtay sanadkii [[2015]]. Wuxuu ku dhawaaqay rabitaankiisa ah inuusan isu taagi doonin doorashada 2020 wuxuuna taa badalkeeda u cadeeyay [[dayvariste Ndayishimiye]] oo ah murashaxnimadiisa uu taageeray. Wuxuu si lama filaan ah u dhintay 8dii Juun 2020 waxyar ka hor dhammaadka rasmiga ah ee muddada xilkiisa. Wuxuu ahaa madaxweynihii ugu muddada dheeraa taariikhda dalka Burundi.
+
+==Taariikh nololeedka==
+
+
+
+
+
+
+
+
+
+{{gumud}}
+
+{{s-start}}
+{{s-off}}
+{{s-bef|before=[[Domitien Ndayizeye]]}}
+{{s-ttl|title=[[Madaxweynaha Burundi]]|years=2005–2020}}
+{{s-aft|after=[[Évariste Ndayishimiye]]}}
+{{s-end}}
+{{BurundiPres}}
+[[Category:Dadka Hutu]] [[Category:Burundi]]
