*Empty MediaWiki Message*

--- a/Rosé.mw
+++ b/Rosé.mw
@@ -21,8 +21,26 @@
 | mrstage         = Roje
 }}}}
 
-Codkeeda Rosé waxay heshay aqoonsi ku saabsan warshadaha K-pop ee waqtigeedu sareyso ee codka, ka dib markii ugu horeysay ee ay xubin ka tahay [[Blackpink]] , Falanqeeyaha Filibiin Almira Blancada, oo u qoraya ABS-CBN, wuxuu caddeeyay "ay adag tahay in la helo cod-bixiye [heeso] ka soo jeeda kuwa kale" sababtuna tahay "qaabka heesta caanka ah", laakiin "waad ogaan lahayd inay Rosé ku heesayso wadne garaac" Ka dib bandhigeedii Rosé ee filimka ''''''Fantastic Duo 2'''''<nowiki/>', fannaan'da  South Korea [[Gummy]], oo Rosé ku tilmaamay tusaale door muusig ah, wuxuu yiri "codka [Rosé] codkiisu aad ayuu u gaar yahay, waa codka nooca [codka] dhalinyarada ay jecel yihiin" , Muusig ahaan, Rosé waxay u aragtaa heesta Mareykanka [[Tori Kelly]] inay tahay dhiira galin ku saabsan qaabkeeda muusikada.
+== Nolosha iyo shaqada ==
 
+=== 1997–2015 ===
+Roseanne Park ({{ko-hhrm|박채영}}; ''Park Chae-young'') wuxuu ku dhashay 11-kii Febraayo 1997 <ref name="blackpinkINSTA">{{Cite web|url=https://www.instagram.com/p/BfBTuV0Alks/|title=BLΛƆKPIИK on Instagram: "#BLACKPINK #블랙핑크 #ROSÉ #로제 #HAPPYBIRTHDAY #2018_02_11 #YG"|website=Instagram|language=en|access-date=2019-07-08}}</ref><ref name="ygTWITTER">{{Cite web|url=https://twitter.com/ygent_official/status/962340411355234304|title=HAPPY BIRTHDAY ROSÉ#BLACKPINK #블랙핑크#2018_02_11 #HBD #로제pic.twitter.com/AJEnRLeSyD|last=FAMILY|first=YG|date=2018-02-10|website=@ygent_official|language=en|access-date=2019-07-08}}</ref> magaalada Auckland, New Zealand, waalidiinta soogalootiga ah ee South Korea.<ref name="scmp18">{{cite news|url=https://www.scmp.com/culture/music/article/2163713/rose-blackpink-new-zealand-born-k-pop-singer-unique-voice-and|title=Rose from Blackpink – New Zealand-born K-pop singer with the unique voice and difficult dance moves|last=Kim|first=Nemo|date=12 September 2018|accessdate=28 May 2019|work=[[South China Morning Post]]}}</ref>  Waxay leedahay hal walaasheed ka weyn. Sannadkii 2004, markay ahayd da'da toddoba, Rosé iyo qoyskeeda waxay u guureen Melbourne, Australia.<ref name="smh">{{cite news|url=https://www.smh.com.au/entertainment/music/blackpinks-rose-how-a-joke-turned-into-kpop-stardom-for-an-australian-singer-20170629-gx15a2.html|title=BlackPink's Rose: How a joke turned into K-pop stardom for an Australian singer|work=[[The Sydney Morning Herald]]|last=Wilder|first=Gabriel|date=27 June 2017|accessdate=28 May 2019}}</ref> Rosé wuxuu ka qalinjabiyey Dugsiga Sare ee Gabdhaha ee Canterbury Melinne<ref name="scmp19">{{cite news|url=https://www.scmp.com/magazines/style/people-events/article/2185455/4-things-know-about-k-pop-star-rose-blackpinks-high|title=4 things to know about K-pop star Rose, BLACKPINK's high-note singer|last=Li|first=Caspar|date=11 February 2019|accessdate=28 May 2019|work=[[South China Morning Post]]}}</ref>  Waxay bilawday inay heesto oo ay barto sida loo ciyaaro guitar iyo piano markay ahayd cunug waxayna ku cayaartay kuraasta kaniisadaha.<ref name="smh2" /><ref name="scmp192" />
+
+Sannadkii 2012, Rosé oo 15-jir ah ayaa ka soo qeyb-galay xisaab-hubinta Australiyaanka ah ee loogu talagalay sumadda YG Entertainment ee aabaheed soo jeedisay<ref name="smh3" /> waxaana kaalinta koowaad gashay 700 ka-qaybgalayaal.<ref>{{cite news|url=http://time.com/5562946/blackpink-k-pop-everything-to-know|work=[[Time (magazine)|Time]]|title=Everything to Know About K-Pop Group BLACKPINK|last=Moon|first=Kat|date=4 April 2019|accessdate=31 May 2019}}</ref><ref>{{cite news|url=https://entertain.naver.com/read?oid=052&aid=0001163639|title=[Y기획②]멤버를 알면 '진짜' 블랙핑크가 보인다|language=ko|work=YTN|date=7 July 2018|accessdate=28 May 2019|last=Ji|first=Seung-hoon}}</ref> Laba bilood gudahood waxay ku saxeexday calaamadda waxayna u dhaqaaqday Seoul<ref name="scmp193" />
+
+=== 2016-xaadir: Blackpink ===
+{{see also|Blackpink}}
+[[File:20190106_(NEWSEN)_블랙핑크(BLACKPINK),_수줍은_많은_소녀지만_돋보이는_아름다운_미모_(Golden_Disc_Awards_2019)_(3).jpg|alt=Rosé seen from the shoulders up, looks forward, slightly away from the camera.|thumb|Rosé Janaayo 2019.]]
+Rosé wuxuu xubin ka ahaa Blackpink 8 Ogosto 2016<ref>{{cite news|url=https://entertain.naver.com/read?oid=109&aid=0003343019|title=YG, 새 걸그룹 네번째 멤버 로제 공개..호주 출신 실력파..'강렬'|language=ko|work=Osen|date=22 June 2016|accessdate=28 May 2019|last=Sung|first=Mi-kyung}}</ref><ref>{{cite news|url=https://www.billboard.com/articles/columns/k-town/7476115/blackpink-debut-boombaya-whistle-world-digital-songs-chart|title=Blackpink's Major Debut: New K-Pop Girl Group Lands No. 1 & 2 on World Digital Songs Chart|last=Benjamin|first=Jeff|work=[[Billboard (magazine)|Billboard]]|date=16 August 2016|accessdate=30 May 2019}}</ref>
+
+== Farshaxanka ==
+Codkeeda Rosé waxay heshay aqoonsi ku saabsan warshadaha K-pop ee waqtigeedu sareyso ee codka, ka dib markii ugu horeysay ee ay xubin ka tahay [[Blackpink]] , Falanqeeyaha Filibiin Almira Blancada, oo u qoraya ABS-CBN, wuxuu caddeeyay "ay adag tahay in la helo cod-bixiye [heeso] ka soo jeeda kuwa kale" sababtuna tahay "qaabka heesta caanka ah", laakiin "waad ogaan lahayd inay Rosé ku heesayso wadne garaac" Ka dib bandhigeedii Rosé ee filimka ''''''Fantastic Duo 2'''''<nowiki/>', fannaan'da  South Korea [[Gummy]], oo Rosé ku tilmaamay tusaale door muusig ah, wuxuu yiri "codka [Rosé] codkiisu aad ayuu u gaar yahay, waa codka nooca [codka] dhalinyarada ay jecel yihiin" , Muusig ahaan, Rosé waxay u aragtaa heesta Mareykanka [[Tori Kelly]] inay tahay dhiira galin ku saabsan qaabkeeda muusikada.
+
+== Discography ==
+{{for|Rosé's discography xubin ahaan oo Blackpink|Blackpink discography}}
+
+== Filmography ==
+{{for|Muuqaaladeeda xubin ka aha Blackpink|Blackpink#Filmography}}
 <br />
 
 == Discography ==
