--- a/Rosé.mw
+++ b/Rosé.mw
@@ -1,7 +1,7 @@
 {{short description|New Zealand- south korean fanaand}}
 '''Roseanne Park''' (waxay dhalatay 11-kii Febraayo 1997), oo si fiican loogu yaqaanay magaceeda la yiraahdo Rosé (Kuuriyaan: 로제), waa south korean-[[New Zealand]] fanaan Rosé wuxuu la saxeexan yahay sumadda YG Entertainment oo xisaab hubin ku sameeyay sanadkii 2012, Waxay ugu dambeyntii sameysay kulankeedii ugu horreeyay iyada oo ah cod-weyne ka tirsan kooxda gabdhaha ee [[Blackpink]] bishii Agoosto 2016, Waxay marka hore u soo bandhigtay inay tahay fanaaniin kali ah oo ka mid ah heesaha [[G-Dragon]] ee "la'aanteed " (Without you), Waxay sidoo kale caan ku tahay "south korea's lead vocal" sababtoo ah codkeeda oo quruxda badan.
 
-{{Infobox person|name=Rosé|image=Rosé at SBS Gayo Daejeon on December 25, 2017 (3).jpg|caption=Rosé bishii Diseembar 25, 2017.|alt=Rosé sits at a table holding a microphone, looking sideways.|birth_name=Roseanne Park|other_names=Park Chae-young|birth_date={{birth date and age|1997|02|11|df=yes}}|birth_place=[[Auckland]], [[New Zealand]]|home_town=[[Melbourne]], [[Australia]]|module={{Infobox musical artist|embed=yes
+{{Infobox person|name=Rosé|image=170702 블랙핑크 팬사인회 (7).jpg|caption=Rosé 2017.|alt=|birth_name=Roseanne Park|other_names=Park Chae-young|birth_date={{birth date and age|1997|02|11|df=yes}}|birth_place=[[Auckland]], [[New Zealand]]|home_town=[[Melbourne]], [[Australia]]|module={{Infobox musical artist|embed=yes
 | genre              = {{hlist|[[K-pop]]|[[Electronic dance music|EDM]]|[[hip hop music|hip hop]]}}
 | occupation       =fanaan <!-- Being a celebrity with endorsements doesn't make you a model. -->
 | instrument       = cod <!-- Yes, she can play instruments. This is just for what she does professionally, which is singing. -->
