--- a/Meheri.mw
+++ b/Meheri.mw
@@ -46,7 +46,7 @@ Beesha Meheri ismaaciil waxaa ka dhashay dad faro badan oo soomali magac ku laha
 
 * Suldaan C/qaadir Suldaan Faarax Shabeel
 * Suldaan Cabdulaahi Suldaan xaaji Nuur (Carabduur)
-* Ugaas C/rixmaan Axmed Siyaad 
+* Ugaas C/rixmaan Axmed Siy 
 *Amiir Anwar Saciid Naasir
 *nabadoon abdiweli diiriye dafar 
 *Nabadoon Sadiiq cali cadceed 
